--- a/app/templates/reply_guy/_tweets.html
+++ b/app/templates/reply_guy/_tweets.html
@@ -1,10 +1,11 @@
                         {% if current_analysis and current_analysis.tweet_opportunities %}
                         {% for tweet in current_analysis.tweet_opportunities %}
+                        <!-- DEBUG: tweet has image_urls: {{ tweet.image_urls|length if tweet.image_urls else 0 }} -->
                         <div class="tweet-opportunity"
                              data-tweet-id="{{ tweet.tweet_id }}"
                              data-tweet-text="{{ tweet.text | replace('"', '&quot;') | replace("'", '&#39;') }}"
                              data-tweet-author="{{ tweet.author }}"
-                             {% if tweet.image_urls %}data-image-urls="{{ tweet.image_urls | tojson | escape }}"{% endif %}>
+                             {% if tweet.image_urls and tweet.image_urls|length > 0 %}data-image-urls='{{ tweet.image_urls | tojson }}'{% endif %}>
                             <div class="tweet-grid">
                                 <!-- Tweet Content - Official X Embed -->
                                 <div class="tweet-content-section">
